--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,26 @@ services:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    networks:
+      - new
     environment:
       MYSQL_ROOT_PASSWORD: senha_forte
     ports:
       - "3306:3306"
+  creche-microservice:
+    build: .
+    networks:
+      - new
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+#  creche-microservice:
+#    image: creche-facil/microservice.creche
+#    networks:
+#      - new
+#    ports:
+#      - "8080:8080"
   adminer:
     image: adminer
     restart: always
